// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"cache" option should work when \`cache\` is \`false\`: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work when \`cache\` is \`false\`: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work when \`cache\` is \`false\`: errors 1`] = `Array []`;

exports[`"cache" option should work when \`cache\` is \`false\`: errors 2`] = `Array []`;

exports[`"cache" option should work when \`cache\` is \`false\`: warnings 1`] = `Array []`;

exports[`"cache" option should work when \`cache\` is \`false\`: warnings 2`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: errors 1`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: errors 2`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: warnings 1`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option and with the "algorithm" option: warnings 2`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: errors 1`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: errors 2`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: warnings 1`] = `Array []`;

exports[`"cache" option should work with "filesystem" value for the "cache.type" option: warnings 2`] = `Array []`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js",
    16495,
    Object {
      "chunkhash": "c9c6c970f01f9eb6d301",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.c9c6c970f01f9eb6d301.js.gz",
      },
      "size": 16495,
    },
  ],
  Array [
    "main.c9c6c970f01f9eb6d301.js.gz",
    3934,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3934,
    },
  ],
]
`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: errors 1`] = `Array []`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: errors 2`] = `Array []`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: warnings 1`] = `Array []`;

exports[`"cache" option should work with "memory" value for the "cache.type" option: warnings 2`] = `Array []`;
